--- a/index.html
+++ b/index.html
@@ -54,6 +54,126 @@
                 </div>
             </div>
         </div>
+        <section class="menu">
+            <div class="container">
+                <div class="menu-header">
+                    <h2 class="menu-title">Бургеры</h2>
+                    <select class="menu-select">
+                        <option value="">Сортировать</option>
+                        <option value="up">По возрастанию</option>
+                        <option value="down">По убыванию</option>
+                    </select>
+                </div>
+                <div class="menu-grid">
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="images/menu/01.jpg" alt="Острый бургер">
+                        </div>
+                        <p class="menu-grid-title">Острый бургер</p>
+                        <p class="menu-grid-price">$26</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="images/menu/02.jpg" alt="Гриль Бургер">
+                        </div>
+                        <p class="menu-grid-title">Гриль Бургер</p>
+                        <p class="menu-grid-price">$16</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="images/menu/03.jpg" alt="Бургер Гигант">
+                        </div>
+                        <p class="menu-grid-title">Бургер Гигант</p>
+                        <p class="menu-grid-price">$37</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="images/menu/04.jpg" alt="Бургер с курицей">
+                        </div>
+                        <p class="menu-grid-title">Бургер с курицей</p>
+                        <p class="menu-grid-price">$18</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="images/menu/05.jpg" alt="Бургер с курицей">
+                        </div>
+                        <p class="menu-grid-title">Бургер с курицей</p>
+                        <p class="menu-grid-price">$9</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="menu-grid-item">
+                        <div class="menu-grid-cover">
+                            <img src="images/menu/06.jpg" alt="Тройной бургер">
+                        </div>
+                        <p class="menu-grid-title">Тройной бургер</p>
+                        <p class="menu-grid-price">$7</p>
+                        <button type="button" class="menu-grid-btn">
+                            <span class="menu-grid-icon"></span>
+                            <span class="menu-grid-text">купить</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="additionally">
+            <div class="container">
+                <h2 class="additionally-header">Дополнительно</h2>
+                <div class="additionally-grid">
+                    <div class="additionally-grid-item">
+                        <div class="additionally-grid-cover">
+                            <img src="images/add/1.jpg" alt="Сэндвич">
+                        </div>
+                        <p class="additionally-grid-title">Сэндвич</p>
+                        <p class="additionally-grid-price">$3</p>
+                        <button type="button" class="additionally-grid-btn">
+                            <span class="additionally-grid-icon"></span>
+                            <span class="additionally-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="additionally-grid-item">
+                        <div class="additionally-grid-cover">
+                            <img src="images/add/2.jpg" alt="Картошка Фри">
+                        </div>
+                        <p class="additionally-grid-title">Картошка Фри</p>
+                        <p class="additionally-grid-price">$5</p>
+                        <button type="button" class="additionally-grid-btn">
+                            <span class="additionally-grid-icon"></span>
+                            <span class="additionally-grid-text">купить</span>
+                        </button>
+                    </div>
+                    <div class="additionally-grid-item">
+                        <div class="additionally-grid-cover">
+                            <img src="images/add/3.jpg" alt="Хот-Дог">
+                        </div>
+                        <p class="additionally-grid-title">Хот-Дог</p>
+                        <p class="additionally-grid-price">$7</p>
+                        <button type="button" class="additionally-grid-btn">
+                            <span class="additionally-grid-icon"></span>
+                            <span class="additionally-grid-text">купить</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
