--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burger</title>
+    <title>Burgers</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;700;800;900&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -12,171 +12,36 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="header">
-                <div class="header-item">
-                    <a href="#" class="header-logo"></a>
-                    <nav>
-                        <ul class="header-nav">
-                            <li><a href="#">Главная</a></li>
-                            <li><a href="#" class="active">Меню</a></li>
-                            <li><a href="#">О нас</a></li>
-                            <li><a href="#">Контакты</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <button type="button" class="button">
-                    <span class="button-item">
-                        <img src="images/cart.svg" alt="Корзина">
-                        <span class="button-count">5</span>
-                    </span>
-                    <span class="button-text">$125</span>
-                </button>
+    <div class="main">
+        <div class="wrapper">
+            <div class="content">
+                <h1 class="content-title">
+                    <span>работаем с 11:00 до 22:00</span>
+                    лучшие бургеры
+                </h1>
+                <p class="content-text">Закажи наши фирменные бурегры или собери что-то своё, а&nbsp;наши курьеры доставят за&nbsp;30&nbsp;минут</p>
+                <a class="content-link" href="menu.html">заказать</a>
             </div>
-        </div>
-    </header>
-    <div class="bg">
-        <div class="container">
-            <ul class="breadcrumbs">
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">Меню</a></li>
-            </ul>
-            <h1 class="title">Наше меню</h1>
-            <p class="description">Выбирай из ассортимента и мы доставим блюдо в течение часа</p>
+            <div class="visual">
+                <div class="visual-bg"></div>
+                <img src="images/burger.png" alt="Burger">
+            </div>
         </div>
     </div>
-    <main>
-        <div class="banner">
-            <div class="container">
-                <div class="banner-box">
-                    <h2 class="banner-title"><span>скидка</span>-30%</h2>
-                    <p class="banner-text">Только при покупке 3-х и более позиций, мы дарим скидку. Акции не суммируются.</p>
-                    <a href="#" class="banner-link">купить сейчас</a>
-                </div>
+    <div class="promo">
+        <div class="wrapper">
+            <div class="promo-left">
+                <p class="sale">Скидка</p>
+                <p class="cost">-20%</p>
+                <p class="promo-description">При заказе на 3х и более персон мы делаем скидки, а также предоставляем скидки именинникам</p>
+            </div>
+            <div class="promo-right">
+                <p class="free">Бесплатно</p>
+                <p class="promo-description">При заказе на сумму 500 рублей и более - доставляем бесплатно</p>
+                <a href="menu.html">заказать</a>
             </div>
         </div>
-        <section class="menu">
-            <div class="container">
-                <div class="menu-header">
-                    <h2 class="menu-title">Бургеры</h2>
-                    <select class="menu-select">
-                        <option value="">Сортировать</option>
-                        <option value="up">По возрастанию</option>
-                        <option value="down">По убыванию</option>
-                    </select>
-                </div>
-                <div class="menu-grid">
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="images/menu/01.jpg" alt="Острый бургер">
-                        </div>
-                        <p class="menu-grid-title">Острый бургер</p>
-                        <p class="menu-grid-price">$26</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="images/menu/02.jpg" alt="Гриль Бургер">
-                        </div>
-                        <p class="menu-grid-title">Гриль Бургер</p>
-                        <p class="menu-grid-price">$16</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="images/menu/03.jpg" alt="Бургер Гигант">
-                        </div>
-                        <p class="menu-grid-title">Бургер Гигант</p>
-                        <p class="menu-grid-price">$37</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="images/menu/04.jpg" alt="Бургер с курицей">
-                        </div>
-                        <p class="menu-grid-title">Бургер с курицей</p>
-                        <p class="menu-grid-price">$18</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="images/menu/05.jpg" alt="Бургер с курицей">
-                        </div>
-                        <p class="menu-grid-title">Бургер с курицей</p>
-                        <p class="menu-grid-price">$9</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="menu-grid-item">
-                        <div class="menu-grid-cover">
-                            <img src="images/menu/06.jpg" alt="Тройной бургер">
-                        </div>
-                        <p class="menu-grid-title">Тройной бургер</p>
-                        <p class="menu-grid-price">$7</p>
-                        <button type="button" class="menu-grid-btn">
-                            <span class="menu-grid-icon"></span>
-                            <span class="menu-grid-text">купить</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="additionally">
-            <div class="container">
-                <h2 class="additionally-header">Дополнительно</h2>
-                <div class="additionally-grid">
-                    <div class="additionally-grid-item">
-                        <div class="additionally-grid-cover">
-                            <img src="images/add/1.jpg" alt="Сэндвич">
-                        </div>
-                        <p class="additionally-grid-title">Сэндвич</p>
-                        <p class="additionally-grid-price">$3</p>
-                        <button type="button" class="additionally-grid-btn">
-                            <span class="additionally-grid-icon"></span>
-                            <span class="additionally-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="additionally-grid-item">
-                        <div class="additionally-grid-cover">
-                            <img src="images/add/2.jpg" alt="Картошка Фри">
-                        </div>
-                        <p class="additionally-grid-title">Картошка Фри</p>
-                        <p class="additionally-grid-price">$5</p>
-                        <button type="button" class="additionally-grid-btn">
-                            <span class="additionally-grid-icon"></span>
-                            <span class="additionally-grid-text">купить</span>
-                        </button>
-                    </div>
-                    <div class="additionally-grid-item">
-                        <div class="additionally-grid-cover">
-                            <img src="images/add/3.jpg" alt="Хот-Дог">
-                        </div>
-                        <p class="additionally-grid-title">Хот-Дог</p>
-                        <p class="additionally-grid-price">$7</p>
-                        <button type="button" class="additionally-grid-btn">
-                            <span class="additionally-grid-icon"></span>
-                            <span class="additionally-grid-text">купить</span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="footer-box">
@@ -186,10 +51,10 @@
                 <div class="footer-item">
                     <h2>Основные ссылки</h2>
                     <ul class="footer-list">
-                        <li><a href="">Меню</a></li>
-                        <li><a href="">Заказ и Доставка</a></li>
-                        <li><a href="">Методы оплаты</a></li>
-                        <li><a href="">Контакты</a></li>
+                        <li><a href="menu.html">Меню</a></li>
+                        <li><a href="#">Заказ и Доставка</a></li>
+                        <li><a href="#">Методы оплаты</a></li>
+                        <li><a href="#">Контакты</a></li>
                     </ul>
                 </div>
                 <div class="footer-item">
