--- a/menu.html
+++ b/menu.html
@@ -42,8 +42,8 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Меню</a></li>
             </ul>
-            <h1 class="title">Наше меню</h1>
-            <p class="description">Выбирай из ассортимента и мы доставим блюдо в течение часа</p>
+            <h1 class="title">Наше Меню</h1>
+            <p class="description">Выбирай из предоставленного ассортимента и мы доставим блюдо в течение часа</p>
         </div>
     </div>
     <main>
