--- a/menu.html
+++ b/menu.html
@@ -15,6 +15,9 @@
     <header id="headerTop">
         <div class="container">
             <div class="header">
+                <div class="header-burger">
+                    <button class="burger" onclick="openModal()"></button>
+                </div>
                 <div class="header-item">
                     <a href="index.html" class="header-logo"></a>
                     <nav>
@@ -224,6 +227,15 @@
         </div>
     </footer>
     <a href="#headerTop" class="button-up hidden" id="btnUp">Наверх</a>
+    <div id="modal" class="modal">
+        <ul class="header-nav">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#" class="active">Меню</a></li>
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
+        <button class="burger-close" onclick="closeModal()"></button>
+    </div>
     <script>
 
         // Smooth scroll
@@ -268,6 +280,16 @@
             } else {
                 document.getElementById('btnUp').className = 'button-up hidden';
             }
+        }
+
+        // Menu 
+
+        function openModal() {
+           document.getElementById("modal").style.top = "0px";
+        }
+
+        function closeModal() {
+           document.getElementById("modal").style.top = "-400px";
         }
     </script>
 </body>
