--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-box">
-                <div class="footer-item">
+                <div class="footer-item item-a">
                     <img src="images/footer-logo.svg" alt="footer-logo">
                 </div>
-                <div class="footer-item">
+                <div class="footer-item item-b">
                     <h2>Основные ссылки</h2>
                     <ul class="footer-list">
                         <li><a href="menu.html">Меню</a></li>
@@ -56,8 +56,12 @@
                         <li><a href="#">Методы оплаты</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
+                    <ul class="footer-list footer-list-tel">
+                        <li><a href="tel:+79007871313">+ 7 900 787 13-13</a></li>
+                        <li><a href="tel:+79007001414">+ 7 900 700 14-14</a></li>
+                    </ul>
                 </div>
-                <div class="footer-item">
+                <div class="footer-item item-c">
                     <h2>Основная информация</h2>
                     <ul class="footer-list">
                         <li>
@@ -71,14 +75,16 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-tel">
-                    <ul class="footer-list footer-list-tel">
-                        <li><a href="tel:+79007871313">+ 7 900 787 13-13</a>
-                        </li>
-                        <li><a href="tel:+79007001414">+ 7 900 700 14-14</a>
-                        </li>
-                    </ul>
-                </div> 
+                <div class="footer-item item-d">
+                    <div class="footer-tel">
+                        <ul class="footer-list footer-list-tel">
+                            <li><a href="tel:+79007871313">+ 7 900 787 13-13</a>
+                            </li>
+                            <li><a href="tel:+79007001414">+ 7 900 700 14-14</a>
+                            </li>
+                        </ul>
+                    </div> 
+                </div>
             </div>           
         </div>
     </footer>
