--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="visual">
                 <div class="visual-bg"></div>
-                <img src="images/burger.png" alt="Burger">
+                <img src="images/burger-2.png" alt="Burger">
             </div>
         </div>
     </div>
